--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,50 @@ h2{
   text-align: right;
 }
 
-/* non voglio i link sottolieati */
-a{
+header{
+  padding: 20px 0;
+}
+
+header::after{
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.logo{
+  float: left;
+}
+
+header nav{
+  float: right;
+}
+
+/* menu */
+ul{
+  list-style: none;
+}
+
+ul li{
+  display: inline-block;
+  padding: 5px 10px;
+}
+
+ul li a{
   text-decoration: none;
   color: #c13352;
   text-transform: uppercase;
 }
+
+ul li a.active{
+  color: #33C185;
+}
+
+ul li a:hover{
+  text-decoration: underline;
+  color: red;
+}
+/* /menu */
+
 
 /* 
   UTITLIES 
@@ -76,12 +114,28 @@ main{
   padding-bottom: 100px;
 }
 .fattoria{
-  width: 500px;
-  height: 600px;
-  border: 1px solid black;
+  width: 80%;
+  max-width: 750px;
+  margin: 20px auto;
+  height: 400px;
   background-image: url('../img/polli.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+  overflow: hidden;
+  color: yellow;
+}
+
+.fattoria div{
+  background-color: rgba(0, 0, 0, .5);
+  height: 100%;
+  padding-left: 50px;
+  padding-top: 40%;
+}
+
+.fattoria div p{
+  width: 60%;
+  text-align: justify;
 }
 
 .box{
